[package]
name = "general_audio"
description = "Interface to audio"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/general-audio.git"
repository = "https://github.com/stevebob/general-audio.git"
documentation = "https://docs.rs/general_audio"
edition = "2018"

[dependencies]
