[package]
name = "general_audio_native"
description = "Implementation of general_audio::AudioPlayer for native applications"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/general-audio.git"
repository = "https://github.com/stevebob/general-audio.git"
documentation = "https://docs.rs/general_audio_native"
edition = "2018"

[features]
force_dedicated_audio_thread = []

[dependencies]
log = "0.4"
rodio = "0.11"
general_audio = { path = "../audio", version = "0.1" }
