[package]
name = "general_audio_native"
description = "Implementation of general_audio::AudioPlayer for native applications"
version = "0.3.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/general-audio.git"
repository = "https://github.com/gridbugs/general-audio.git"
documentation = "https://docs.rs/general_audio_native"
edition = "2018"

[features]
force_dedicated_audio_thread = []
flac = ["rodio/flac"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]
mp3 = ["rodio/mp3"]

[dependencies]
log = "0.4"
rodio = { version = "0.14", default-features = false }
general_audio = { path = "../audio", version = "0.1" }
