[package]
name = "general_audio_static"
description = "Implementation of general_audio::AudioPlayer where backend chosen statically by a feature"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/general-audio.git"
repository = "https://github.com/stevebob/general-audio.git"
documentation = "https://docs.rs/general_audio_static"
edition = "2018"

[features]
native = ["general_audio_native"]
native_flac = ["general_audio_native/flac"]
native_vorbis = ["general_audio_native/vorbis"]
native_wav = ["general_audio_native/wav"]
native_mp3 = ["general_audio_native/mp3"]
web = ["general_audio_web"]
native_force_dedicated_audio_thread = ["general_audio_native/force_dedicated_audio_thread"]

[dependencies]
general_audio = { path = "../audio", version = "0.1" }
general_audio_native = { path = "../native", version = "0.2", optional = true }
general_audio_web = { path = "../web", version = "0.1", optional = true }
