[package]
name = "general_audio_web"
description = "Implementation of general_audio::AudioPlayer for web browsers"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/general-audio.git"
repository = "https://github.com/stevebob/general-audio.git"
documentation = "https://docs.rs/general_audio_web"
edition = "2018"

[dependencies]
general_audio = { path = "../audio", version = "0.1" }
wasm-bindgen = "0.2"
base64 = "0.12"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlAudioElement',
]
