[package]
name = "general_audio_web"
description = "Implementation of general_audio::AudioPlayer for web browsers"
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/general-audio.git"
repository = "https://github.com/gridbugs/general-audio.git"
documentation = "https://docs.rs/general_audio_web"
edition = "2021"

[dependencies]
general_audio = { path = "../audio", version = "0.1" }
wasm-bindgen = "0.2"
base64 = "0.13"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlAudioElement',
]
